force-app/main/default/objects/PaperCampaignParameter__c/PaperCampaignParameter__c.object-meta.xml
<CustomObject>
    <label>Parametri Campagna Cartacea</label>
    <nameField>
        <label>Parametri Campagna Cartacea Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parametri Campagna Cartacea</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>