force-app/main/default/objects/PaperCampaignParameter__c/fields/Field14__c.field-meta.xml
<CustomField>
    <fullName>Field14__c</fullName>
    <description>Campi testo libero valorizzabili liberamente dall’utente. Sono riportati nel Report Clienti inviato al fornitore che si occupa di stampare ed inviare le comunicazioni.</description>
    <label>Campo 14</label>
    <length>255</length>
    <type>Text</type>
</CustomField>