force-app/main/default/objects/PaperCampaignParameter__c/fields/LetterType__c.field-meta.xml
<CustomField>
    <fullName>LetterType__c</fullName>
    <label>Tipo Lettera</label>
    <length>255</length>
    <type>Text</type>
</CustomField>